<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">emAttendance</string>
    <string name="action_settings">Settings</string>
    <string name="action_server_settings">Server settings</string>
    <string name="action_search">Search</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="server_location">Server Location</string>
    <string name="server_port">Server Port</string>
    <string name="class_id">Class ID</string>
    <string name="section_id">Section ID</string>
    <string name="server_location_value">192.168.1.3</string>
    <string name="server_port_value">8080</string>
    <string name="class_id_value">10</string>
    <string name="section_id_value">2</string>
    <string name="select_class_prompt">Choose a class</string>
    <string name="select_section_prompt">Choose a section</string>
    <string name="select_subject_prompt">Choose a subject</string>
    <string name="select_ok">OK</string>
    <string name="select_cancel">Cancel</string>

    <!-- Login activity-->
    <string name="prompt_id">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="plus_sign_out">Sign out</string>
    <string name="error_invalid_login_credentials">This login credential is invalid</string>
    <string name="error_field_required">This field is required</string>
</resources>
